add URL envs, change scraping from per chair basis to per endpoint basis
